scss/_layouts_fluid-breakout.scss
@import 'settings';

@mixin vf-l-fluid-breakout(
  $l-fluid-breakout-aside-width: $l-fluid-breakout-aside-width,
  $l-fluid-breakout-main-child-width: $l-fluid-breakout-main-child-width,
  $grid-gap: $sp-unit * 2,
  $suffix: ''
) {
  %l-fluid-breakout-ie11-fallback#{$suffix} {
    @media (min-width: $breakpoint-large) {
      display: flex;
    }
  }

  %l-fluid-breakout__full-and-main-item-ie11-fallback#{$suffix} {
    margin-right: $grid-gap;

    @media (min-width: $l-fluid-breakout-3-col-threshold) {
      flex: 1 1 auto;
      width: $l-fluid-breakout-main-child-width;
    }
  }

  %l-fluid-breakout__main-ie11-fallback#{$suffix} {
    display: flex;
    flex-wrap: wrap;
    width: 100%;

    @media (min-width: $l-fluid-breakout-3-col-threshold) {
      width: calc(100% - #{$l-fluid-breakout-aside-width});
    }
  }

  %l-fluid-breakout__aside-common-properties-ie-11-fallback#{$suffix} {
    flex: 0 0 auto;
    justify-content: flex-start;

    @media (min-width: $breakpoint-large) {
      flex: 1 1 auto;
      width: $l-fluid-breakout-aside-width;
    }
  }

  %l-fluid-breakout__aside--left-ie-11-fallback#{$suffix} {
    @extend %l-fluid-breakout__aside-common-properties-ie-11-fallback#{$suffix};
  }

  %l-fluid-breakout__aside--right-ie-11-fallback#{$suffix} {
    @extend %l-fluid-breakout__aside-common-properties-ie-11-fallback#{$suffix};

    @media (max-width: $l-fluid-breakout-3-col-threshold) {
      padding-left: 0;
    }
  }

  .l-fluid-breakout#{$suffix} {
    @extend %l-fluid-breakout-ie11-fallback#{$suffix};

    padding-left: map-get($grid-margin-widths, small);
    padding-right: map-get($grid-margin-widths, small);

    @supports (display: grid) {
      display: block;
      grid-gap: 0 0;
    }

    @media (min-width: $breakpoint-large) {
      margin-left: auto;
      margin-right: auto;
      max-width: calc(2 * #{$l-fluid-breakout-aside-width} + #{$l-fluid-breakout-max-width});

      @supports (display: grid) {
        display: grid;
        grid-template-columns:
          minmax($l-fluid-breakout-aside-width, 1fr)
          minmax(0, $l-fluid-breakout-max-width)
          minmax($l-fluid-breakout-aside-width, 1fr);
        grid-template-rows: auto;
      }
    }

    @media (min-width: $threshold-4-6-col) {
      padding-left: map-get($grid-margin-widths, medium);
      padding-right: map-get($grid-margin-widths, medium);
    }

    @media (min-width: $threshold-6-12-col) {
      padding-left: map-get($grid-margin-widths, large);
      padding-right: map-get($grid-margin-widths, large);
    }

    @media (min-width: $l-fluid-breakout-3-col-threshold) {
      padding-left: 0;
      padding-right: 0;

      @supports (display: grid) {
        grid-gap: 0 0;
      }
    }

    .l-fluid-breakout__main {
      @extend %l-fluid-breakout__main-ie11-fallback#{$suffix};

      @supports (display: grid) {
        display: grid;
        grid-gap: 0 $grid-gap;
        grid-row: 2;
        grid-template-columns: repeat(auto-fit, minmax($l-fluid-breakout-main-child-width, 1fr));
        width: 100%;
      }

      @media (min-width: $l-fluid-breakout-3-col-threshold) {
        padding-left: map-get($grid-margin-widths, large);
        padding-right: map-get($grid-margin-widths, large);
      }

      @media (min-width: $breakpoint-large) {
        @supports (display: grid) {
          grid-column: auto / span 2;

          // stylelint-disable-next-line max-nesting-depth
          &.no-aside {
            grid-column: 2 / span 2;
          }
        }
      }

      &.is-full-width {
        @media (min-width: $breakpoint-large) {
          // stylelint-disable-next-line max-nesting-depth
          @supports (display: grid) {
            grid-column: 1 / span 3;
          }
        }
      }

      .row {
        max-width: 100%;
        padding-left: 0;
        padding-right: 0;
      }
    }

    .l-fluid-breakout__item {
      @extend %l-fluid-breakout__full-and-main-item-ie11-fallback#{$suffix};

      @supports (display: grid) {
        // overwrite fallback margins
        margin-left: 0;
        margin-right: 0;

        @media (min-width: $l-fluid-breakout-3-col-threshold) {
          grid-column: auto / auto;
          width: initial;
        }
      }
    }

    %l-fluid-breakout__aside-common-properties#{$suffix} {
      //negate properties needed for the ie11 fallback
      padding-left: 0;

      @media (min-width: $l-fluid-breakout-3-col-threshold) {
        align-items: start;
      }

      @supports (display: grid) {
        grid-column-end: span 1;
        grid-column-start: auto;
        grid-row: 2 / 100;
      }
    }

    .l-fluid-breakout__aside {
      @extend %l-fluid-breakout__aside--right-ie-11-fallback#{$suffix};
      @extend %l-fluid-breakout__aside-common-properties#{$suffix};

      @media (min-width: $breakpoint-large) {
        padding-right: map-get($grid-margin-widths, large);
      }

      @media (min-width: $l-fluid-breakout-3-col-threshold) {
        padding-left: map-get($grid-margin-widths, large);
        padding-right: 0;
      }
    }

    .l-fluid-breakout__aside--right {
      @extend %l-fluid-breakout__aside--left-ie-11-fallback#{$suffix};
      @extend %l-fluid-breakout__aside-common-properties#{$suffix};

      @media (min-width: $breakpoint-large) {
        padding-left: map-get($grid-margin-widths, large);
        padding-right: 0;
      }

      @media (min-width: $l-fluid-breakout-3-col-threshold) {
        padding-left: 0;
        padding-right: map-get($grid-margin-widths, large);
      }

      @extend %l-fluid-breakout__aside-common-properties#{$suffix};
    }

    .l-fluid-breakout__toolbar {
      @extend %l-fluid-breakout-ie11-fallback#{$suffix};

      margin-block-end: $spv-outer--medium;

      @media (min-width: $breakpoint-large) {
        margin-left: auto;
        margin-right: auto;
        max-width: calc(2 * #{$l-fluid-breakout-aside-width} + #{$l-fluid-breakout-max-width});

        @supports (display: grid) {
          display: grid;
          grid-column: 1 / -1;
          grid-template-columns:
            minmax($l-fluid-breakout-aside-width, 1fr)
            minmax(0, $l-fluid-breakout-max-width)
            minmax($l-fluid-breakout-aside-width, 1fr);
          grid-template-rows: auto;
        }
      }

      @media (min-width: $l-fluid-breakout-3-col-threshold) {
        margin-left: map-get($grid-margin-widths, large);
        margin-right: map-get($grid-margin-widths, large);
      }
    }

    .l-fluid-breakout__toolbar-items {
      @supports (display: grid) {
        display: grid;
        grid-column: 2 / -1;
        grid-template-columns: repeat(2, minmax(0, 1fr));

        @media (max-width: $threshold-4-6-col) {
          flex: 1 1 auto;
          grid-template-columns: repeat(1, minmax(0, 1fr));
          width: $l-fluid-breakout-main-child-width;
        }
      }
    }

    .l-fluid-breakout__toolbar-item {
      align-items: center;
      display: flex;

      @supports (display: grid) {
        grid-column-end: span 1;
      }

      &:nth-child(2) {
        justify-content: flex-end;

        @media (max-width: $threshold-4-6-col) {
          justify-content: flex-start;
        }
      }
    }
  }
}

